DXL 통신핀 풀업 추가.

--- a/lib_fw/lib/cube_f411/cube_f411.ioc
+++ b/lib_fw/lib/cube_f411/cube_f411.ioc
@@ -266,7 +266,7 @@ PB5.Mode=SD_4_bits_Wide_bus
 PB5.Signal=SDIO_D3
 PB6.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOD
 PB6.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
-PB6.GPIO_PuPd=GPIO_NOPULL
+PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Mode=Half_duplex(single_wire_mode)
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_PuPd
